# CommitSentinel

./: .gitignore  README.md  pyproject.toml
commitsentinel/: cli.py
commitsentinel/ai/: explain.py
commitsentinel/models/: finding.py
commitsentinel/reports/: console.py
commitsentinel/scanners/: _shared.py  base.py  conflict_markers.py  rules.py  secrets.py  sensitive_files.py
commitsentinel/scoring/: score.py
tests/: test_cli.py  test_conflict_markers.py  test_console.py  test_explain.py  test_scoring.py  test_secrets.py  test_sensitive_files.py
