[project]
name = "commitsentinel"
version = "0.1.0"
description = "Scan source code and git repos for secrets, conflict markers, and sensitive files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
commitsentinel = "commitsentinel.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anthropic>=0.40",
]
ai = [
    "anthropic>=0.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["commitsentinel*"]
